# usb-explorer

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
config/: devices.yaml  devices.yaml.example
doc/: overview.md
src/usb_debug_tool/: __init__.py  config_manager.py  dmesg_parser.py  main.py  models.py  usb_monitor.py  vendor_lookup.py
src/usb_explorer/: __init__.py  __main__.py  config_manager.py  dmesg_parser.py  main.py  models.py  usb_monitor.py  websocket_manager.py
src/usb_explorer/static/css/: style.css
src/usb_explorer/static/js/: app.js  audio.js  info-panel.js  tree.js
src/usb_explorer/templates/: index.html
static/css/: style.css
static/js/: app.js  audio.js  info-panel.js  tree.js  websocket.js
templates/: index.html
